--- a/Astraforge/backend/requirements.txt
+++ b/Astraforge/backend/requirements.txt
@@ -9,6 +9,7 @@ asyncpg>=0.29.0
 httpx>=0.25.2
 python-multipart>=0.0.6
 python-jose[cryptography]>=3.3.0
+PyJWT>=2.8.0
 passlib[bcrypt]>=1.7.4
 numpy>=1.25.2
 scipy>=1.11.4
